# tree-sitter-turbowave

./: .gitignore  Cargo.toml  README-crate.md  README.md  binding.gyp  grammar.js  index.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/: sample.tw
test/corpus/: association.txt  data-types.txt  object-creation.txt  preprocessor.txt  reactions.txt  special.txt
test/highlight/: ioniz.tw
