[package]
name = "tree-sitter-turbowave"
description = "turbowave grammar for the tree-sitter parsing library"
version = "1.7.1"
keywords = ["incremental", "parsing", "turbowave"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/dfgordon/tree-sitter-turbowave"
readme = "README-crate.md"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.20.6"

[build-dependencies]
cc = "1.0"
